istio-canary/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout


---

apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-proxy
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: istio-rollout-proxy
